# project-template

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  deploy.sh  pyproject.toml  requirements.in  requirements.txt
docroot/: service-worker.js  (+1 more)
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  deploy.sh  pyproject.toml  requirements.in
{{cookiecutter.project_slug}}/apps/cruncher/templates/email/: email.html  email_text.html
{{cookiecutter.project_slug}}/apps/cruncher/templates/widgets/: increment-control.html  select-button.html
{{cookiecutter.project_slug}}/apps/cruncher/templatetags/: share_tags.py  string_tags.py
{{cookiecutter.project_slug}}/apps/news/templates/news/: news-card.html
{{cookiecutter.project_slug}}/apps/users/: models.py
{{cookiecutter.project_slug}}/apps/users/templates/auth/: login.html
{{cookiecutter.project_slug}}/apps/users/templates/password-reset/: password-reset-done.html  password-reset-form.html
{{cookiecutter.project_slug}}/conf/prod/: crontab  gunicorn.conf.py  gunicorn.service  gunicorn.socket  htpasswd.py  letsencrypt.conf  nginx.conf  project_name.gunicorn.conf  project_name.rqworker.conf  robots.txt  rqworker@.service  {{cookiecutter.project_slug}}.rqworker.conf
{{cookiecutter.project_slug}}/docroot/: manifest.webmanifest
{{cookiecutter.project_slug}}/static/project_name/: module.css
{{cookiecutter.project_slug}}/templates/: base.html
{{cookiecutter.project_slug}}/templates/cms/plugins/: column.html
{{cookiecutter.project_slug}}/templates/test/: index.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: Makefile  fabfile.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/cruncher/: admin.py  auth_backends.py  filer.py  forms.py  html.py  models.py  timestamps.py  views.py  widgets.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/cruncher/templatetags/: cache_buster_tags.py  cruncher_crispy_forms_tags.py  cruncher_tags.py  share_tags.py  widget_tweaks_fork.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/home/: models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/news/: admin.py  cms_toolbars.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/news-djangocms/: admin.py  cms_apps.py  cms_config.py  cms_plugins.py  models.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/news-wagtail/: blocks.py  models.py  wagtail_hooks.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/news-wagtail/migrations/: 0001_initial.py  0002_articlepage_related_page.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/users/: admin.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/users/forms/: auth.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/users/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/: base.py  local.py-prod-template  local.py-template  test.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/test/: module.css
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/test/classes/: test-table.css
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/{{cookiecutter.project_slug}}/: breakpoints.json
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/{{cookiecutter.project_slug}}/classes/: class.css
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: base.html  site.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/admin/: base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/cms/: djangocms_base.html  home.html  page.html  wagtail_base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/includes/: nav.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/test/: _index.html  index.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: urls.py  views.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/: __init__.py  base.py  local.py-template  r2.py  s3.py  test.py
(+189 files in other folders)
